--- a/Mymeng/app/src/main/res/values/styles.xml
+++ b/Mymeng/app/src/main/res/values/styles.xml
@@ -28,4 +28,30 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:singleLine">true</item>
     </style>
+
+    <style name="NormalText" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@color/text_color_normal</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <!--<item name="tabMaxWidth">@dimen/tab_max_width</item>-->
+        <!--<item name="tabIndicatorColor">?attr/colorAccent</item>-->
+        <!--<item name="tabIndicatorHeight">2dp</item>-->
+        <!--<item name="tabPaddingStart">12dp</item>-->
+        <!--<item name="tabPaddingEnd">12dp</item>-->
+        <!--<item name="tabBackground">?attr/selectableItemBackground</item>-->
+        <item name="tabSelectedTextColor">@color/text_color_hint</item>
+        <item name="tabTextAppearance">@style/MyCustomTabTextAppearance</item>
+        <!--<item name="tabSelectedTextColor">?android:textColorPrimary</item>-->
+    </style>
+    <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/font_small</item>
+        <!--<item name="android:textColor">?android:textColorSecondary</item>-->
+        <item name="textAllCaps">true</item>
+        <item name="android:textColor">@color/text_color_hint</item>
+    </style>
 </resources>
